--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -8,3 +8,14 @@ img{
     display: flex;
     justify-content: center;
 }
+.title{
+    margin-right: 80px;
+    font-size: 50px;
+    font-weight: bold;
+    color: #FFFFFF;
+}
+.seasonThree{
+    margin-top: 60px;
+    font-size: 30px;
+    color: #FFFFFF;
+}
