--- a/src/app/pages/schedules/schedules.component.html
+++ b/src/app/pages/schedules/schedules.component.html
@@ -1,5 +1,20 @@
+<nav class="navbar navbar-expand-lg navBG">
+    <div class="container-fluid">
+        <div class="col-1">
+            <img src="assets/codestacklogo.png" alt="The Codestack Academy logo">
+        </div>
+        <div class="col-2">
+            <p class="seasonThree">Season 3</p>
+        </div>
+        <div class="col-6 headerTitle">
+            <p class="title">BART Web-Application</p>
+        </div>
+        <div class="col-2 headerTitle">
+            <app-dropdown></app-dropdown>
+        </div>
+    </div>
+</nav>
 <div class="container">
-    <p>schedules works! header goes here</p>
     <app-button buttonText="Schedules" disabled></app-button>
 
     <p>Station dropdown 1 - date picker - time picker - "Get Schedule Button"</p>
