--- a/src/app/components/universal/dropdown/dropdown.component.html
+++ b/src/app/components/universal/dropdown/dropdown.component.html
@@ -1,1 +1,8 @@
-<p>dropdown works!</p>
+<div class="container">
+    <select class=" rounded-0 custom-select" id="inputGroupSelect01">
+        <option selected>{{initialText}}</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+    </select>
+</div>
