--- a/src/app/pages/trip-planner/trip-planner.component.html
+++ b/src/app/pages/trip-planner/trip-planner.component.html
@@ -1,16 +1,1 @@
-<nav class="navbar navbar-expand-lg navBG">
-    <div class="container-fluid">
-        <div class="col-1">
-            <img src="assets/codestacklogo.png" alt="The Codestack Academy logo">
-        </div>
-        <div class="col-2">
-            <p class="seasonThree">Season 3</p>
-        </div>
-        <div class="col-6 headerTitle">
-            <p class="title">BART Web-Application</p>
-        </div>
-        <div class="col-2 headerTitle">
-            <app-dropdown></app-dropdown>
-        </div>
-    </div>
-</nav>
+<app-header></app-header>
