--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
     </div>
     <div class="col-12">
       <ul>
-        <li *ngFor="let station of StationsList">{{station.name}}</li>
+        <li *ngFor="let station of StationsList">{{station.name}} | <b>{{station.abbr}}</b></li>
       </ul>
     </div>
   </div>
