Working, populationg dropdowns

--- a/src/app/components/universal/header/header.component.html
+++ b/src/app/components/universal/header/header.component.html
@@ -10,7 +10,7 @@
             <p class="title">BART Web-Application</p>
         </div>
         <div class="col-2 headerTitle">
-            <app-dropdown></app-dropdown>
+            <app-dropdown [popArray] = "dropArray"></app-dropdown>
         </div>
     </div>
 </nav>
