--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,35 +1,41 @@
 <app-header></app-header>
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-4">
-            <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-                <img src="..." class="card-img-bottom" alt="...">
-              </div>
+  <div class="row cardMargin">
+    <div class="col-4">
+      <div class="card">
+        <div class="card-body cardOneTop">
+          <h5 class="card-title text-center">Fare Trip</h5>
         </div>
-        <div class="col-4">
-            <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-                <img src="..." class="card-img-bottom" alt="...">
-              </div>
+        <div class="card-body cardOneBottom cardSize">
+          <h1 class="d-flex justify-content-center">
+            <i class="fas fa-map-marker-alt fa-3x"></i>
+          </h1>
         </div>
-        <div class="col-4">
-            <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-                <img src="..." class="card-img-bottom" alt="...">
-              </div>
-        </div>
+      </div>
     </div>
+    <div class="col-4">
+      <div class="card">
+        <div class="card-body cardTwoTop">
+          <h5 class="card-title text-center">Schedules</h5>
+        </div>
+        <div class="card-body cardSize cardTwoBottom">
+          <h1 class="d-flex justify-content-center">
+            <i class="far fa-clock fa-3x"></i>
+          </h1>
+        </div>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="card">
+        <div class="card-body cardThreeTop">
+          <h5 class="card-title text-center">Departures/Arrival</h5>
+        </div>
+        <div class="card-body cardSize cardThreeBottom">
+          <h1 class="d-flex justify-content-center">
+            <i class="fas fa-train fa-3x"></i>
+          </h1>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
