100% DopDown Sizes and part of trip planner done

--- a/src/app/components/universal/dropdown/dropdown.component.css
+++ b/src/app/components/universal/dropdown/dropdown.component.css
@@ -7,3 +7,12 @@
     -webkit-appearance: none;
 
 }
+
+.optionStyle{
+    font-size: 30px;
+    min-width: 100%;
+}
+
+.container{
+    min-width: 100%;
+}
