--- a/src/app/components/universal/dropdown/dropdown.component.html
+++ b/src/app/components/universal/dropdown/dropdown.component.html
@@ -1,8 +1,5 @@
 <div class="container">
-    <select class=" rounded-0 custom-select" id="inputGroupSelect01">
-        <option *ngFor="let item of popArray">{{item}}</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
+    <select class=" rounded-0 custom-select optionStyle" id="inputGroupSelect01">
+        <option class="" *ngFor="let item of popArray">{{item}}</option>
     </select>
 </div>
