--- a/src/app/pages/trip-planner/trip-planner.component.html
+++ b/src/app/pages/trip-planner/trip-planner.component.html
@@ -1,1 +1,23 @@
 <app-header></app-header>
+<div class="container mainContainer">
+    <div class="row">
+        <div class="col-8">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 titleBG d-flex align-items-center">
+                        <p class="title ms-3">Trip Planner:</p>
+                    </div>
+                    <div class="col-12 mt-3">
+                        <app-dropdown></app-dropdown>
+                    </div>
+                    <div class="col-12 mt-3">
+                        <app-dropdown></app-dropdown>
+                    </div>
+                    <div class="col-12 mt-3">
+                        <app-button buttonText = "Search"></app-button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
