Some median touches on the trip-planner page

--- a/src/app/pages/trip-planner/trip-planner.component.css
+++ b/src/app/pages/trip-planner/trip-planner.component.css
@@ -30,4 +30,10 @@ img{
 }
 .btn{
     min-width: 100%;
+    font-size: 30px;
+    background-color: rgb(0, 100, 168);
+}
+
+.abSize{
+    font-size: 30px;
 }
