--- a/src/app/pages/trip-planner/trip-planner.component.html
+++ b/src/app/pages/trip-planner/trip-planner.component.html
@@ -7,14 +7,20 @@
                     <div class="col-12 titleBG d-flex align-items-center">
                         <p class="title ms-3">Trip Planner:</p>
                     </div>
-                    <div class="col-12 mt-3">
+                    <div class="col-1 ">
+                        <p class="abSize mt-3 mb-0">A</p>
+                    </div>
+                    <div class="col-11 mt-3 pe-0">
                         <app-dropdown></app-dropdown>
                     </div>
-                    <div class="col-12 mt-3">
+                    <div class="col-1 ">
+                        <p class="abSize mt-3 mb-0">B</p>
+                    </div>
+                    <div class="col-11 mt-3 pe-0">
                         <app-dropdown></app-dropdown>
                     </div>
-                    <div class="col-12 mt-3">
-                        <app-button buttonText = "Search"></app-button>
+                    <div class="col-12 px-0 mt-4">
+                        <button type="button" class="btn btn-primary">Search</button>
                     </div>
                 </div>
             </div>
