--- a/src/app/components/universal/dropdown/dropdown.component.html
+++ b/src/app/components/universal/dropdown/dropdown.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <select class=" rounded-0 custom-select optionStyle" id="inputGroupSelect01">
+    <select class=" rounded-0 custom-select optionStyle py-2" id="inputGroupSelect01">
         <option class="" *ngFor="let item of popArray">{{item}}</option>
     </select>
 </div>
