--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,57 +1,73 @@
-.navBG{
+.navBG {
     background-color: #0064A8;
 }
-img{
+
+img {
     height: 114px;
 }
-.headerTitle{
+
+.headerTitle {
     display: flex;
     justify-content: center;
 }
-.title{
+
+.title {
     margin-right: 80px;
     font-size: 50px;
     font-weight: bold;
     color: #FFFFFF;
 }
-.seasonThree{
+
+.seasonThree {
     margin-top: 60px;
     font-size: 30px;
     color: #FFFFFF;
 }
-.cardMargin{
+
+.cardMargin {
     margin-top: 150px;
 }
-.cardOneTop{
+
+.cardOneTop {
     background-color: #50B820;
 }
-.cardOneBottom{
+
+.cardOneBottom {
     background-color: #50B820;
     opacity: 70%;
 }
-.cardSize{
+
+.cardSize {
     height: 200px;
 }
-.cardTwoTop{
+
+.cardTwoTop {
     background-color: #00A1FF;
 }
-.cardTwoBottom{
+
+.cardTwoBottom {
     background-color: #00A1FF;
     opacity: 70%;
 }
-.cardThreeTop{
+
+.cardThreeTop {
     background-color: #B73EB7;
 }
-.cardThreeBottom{
+
+.cardThreeBottom {
     background-color: #B73EB7;
     opacity: 70%;
 }
-#background{
+
+#background {
     height: 100%;
     background-image: url("./SideshowBob.png");
-    background-size: cover;  
+    background-size: cover;
     background-size: 100%;
+    background-repeat: no-repeat;
 }
-.noPad{
+
+.noPad {
     padding: 0%;
+    height: 100%;
 }
