--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,7 +4,7 @@
     <div class="row cardMargin">
       <div class="col-4">
           <!-- Click event will go on whole card for routing-->
-        <div class="card">
+        <div class="card removeBorder">
           <div class="card-body cardOneTop">
             <h5 class="card-title text-center">Fare Trip</h5>
           </div>
@@ -17,7 +17,7 @@
       </div>
       <div class="col-4">
         <!-- Click event will go on whole card for routing-->
-        <div class="card">
+        <div class="card removeBorder">
           <div class="card-body cardTwoTop">
             <h5 class="card-title text-center">Schedules</h5>
           </div>
@@ -30,7 +30,7 @@
       </div>
       <div class="col-4">
           <!-- Click event will go on whole card for routing-->
-        <div class="card">
+        <div class="card removeBorder">
           <div class="card-body cardThreeTop">
             <h5 class="card-title text-center">Departures/Arrival</h5>
           </div>
