Train icon departures

--- a/src/app/pages/departures/departures.component.html
+++ b/src/app/pages/departures/departures.component.html
@@ -29,14 +29,14 @@
                     <div class="row">
                         <div class="col">Berryessa
                         </div>
-                        <div class="col">10 min (10 car [train icon]) 29 min (8 car )
+                        <div class="col">10 min (10 car <i class="fas fa-train"></i>) 29 min (8 car )
                         </div>
                     </div>
                     <hr>
                     <div class="row">
                         <div class="col">Dublin/ Pleasanton
                         </div>
-                        <div class="col">10 min (10 car [train icon][train icon]) 29 min (10 car )
+                        <div class="col">10 min (10 car <i class="fas fa-train"></i>) 29 min (10 car )
                         </div>
                     </div>
                 </div>
@@ -47,14 +47,14 @@
                     <div class="row">
                         <div class="col">Berryessa
                         </div>
-                        <div class="col">10 min (10 car [train icon]) 29 min (8 car )
+                        <div class="col">10 min (10 car <i class="fas fa-train"></i>) 29 min (8 car )
                         </div>
                     </div>
                     <hr>
                     <div class="row">
                         <div class="col">Dublin/ Pleasanton
                         </div>
-                        <div class="col">10 min (10 car [train icon][train icon]) 29 min (10 car )
+                        <div class="col">10 min (10 car <i class="fas fa-train"></i>) 29 min (10 car )
                         </div>
                     </div>
                 </div>
@@ -62,6 +62,6 @@
         </tbody>
     </table>
     <div class="d-flex justify-content-end">
-        <p>[train icon] = 3 door train <del class="redText">Cancelled Trip</del></p>
+        <p><i class="fas fa-train"></i> = 3 door train <del class="redText">Cancelled Trip</del></p>
     </div>
 </div>
