--- a/src/app/components/universal/header/header.component.html
+++ b/src/app/components/universal/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navBG">
     <div class="container-fluid">
         <div class="col-1">
-            <img src="assets/codestacklogo.png" alt="The Codestack Academy logo">
+            <img src="assets/codestacklogo.png" alt="The Codestack Academy logo" routerLink='/home'>
         </div>
         <div class="col-2">
             <p class="seasonThree">Season 3</p>
