--- a/src/app/pages/trip-planner/trip-planner.component.html
+++ b/src/app/pages/trip-planner/trip-planner.component.html
@@ -23,6 +23,26 @@
                         <button type="button" class="btn btn-primary">Search</button>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-12 mt-5 titleBG">
+                        <p class = "font30 my-3">Sun, 3/14/2021</p>
+                    </div>
+                    <div class="col-12 tableBG d-flex">
+                        <p class = "font26 my-3 me-5">8:28 PM - 8:54 PM</p>
+                        <p class = "font26 my-3 mx-5">0 Hours 26 Minutes</p>
+                        <p class = "font26 my-3 ms-5">Price: $3.90</p>
+                    </div>
+                    <div class="col-12 tableBG d-flex">
+                        <p class = "font26 my-3 me-5">8:28 PM - 8:54 PM</p>
+                        <p class = "font26 my-3 mx-5">0 Hours 26 Minutes</p>
+                        <p class = "font26 my-3 ms-5">Price: $3.90</p>
+                    </div>
+                    <div class="col-12 tableBG d-flex">
+                        <p class = "font26 my-3 me-5">8:28 PM - 8:54 PM</p>
+                        <p class = "font26 my-3 mx-5">0 Hours 26 Minutes</p>
+                        <p class = "font26 my-3 ms-5">Price: $3.90</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
