updates JR pages

--- a/src/app/pages/schedules/schedules.component.html
+++ b/src/app/pages/schedules/schedules.component.html
@@ -5,6 +5,7 @@
     <div class="row">
         <div class="col-2 headerTitle">
             <app-dropdown></app-dropdown>
+            <!-- follow Sean's implementation of the array to build the items in the dropdown -->
         </div>
         <div class="col-2">
             <div class="mb-3">
@@ -15,6 +16,7 @@
         </div>
         <div class="col-2 headerTitle">
             <app-dropdown></app-dropdown>
+            <!-- follow Sean's implementation of the array to build the items in the dropdown -->
         </div>
         <div class="col-2">
             <app-button buttonText="Get Schedule"></app-button>
@@ -22,7 +24,7 @@
     </div>
 
     <h4 class="blueText mt-4">Station Schedule Results for [[station name]]</h4>
-    <b class="blueText">Get another schedule</b>
+    <!-- <b class="blueText">Get another schedule</b> -->
 
     <div class="row mt-4">
         <div class="col">
