--- a/src/app/pages/departures/departures.component.css
+++ b/src/app/pages/departures/departures.component.css
@@ -1,13 +1,28 @@
 table {
     background-color: #B73EB736;
+    border: 1px solid #707070;
     /* width: 70% */
 }
 
 td {
-    padding: 20px!important
+    padding: 20px!important;
+    border: 1px solid #707070!important;
 }
 
 th {
+    border: 1px solid #707070;
     background-color: #B73EB7;
     color: white
+}
+
+tr {
+    border: 1px solid #707070;
+}
+
+.rightAlign {
+    text-align: right;
+}
+
+.thiccTop {
+    border-top: 2px solid;
 }
