--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid noPad" id="background">
   <app-header></app-header>
-  <div class="container-fluid" >
+  <div class="container-fluid">
     <div class="row cardMargin">
       <div class="col-4">
-          <!-- Click event will go on whole card for routing-->
+        <!-- Click event will go on whole card for routing-->
         <div class="card removeBorder">
           <div class="card-body cardOneTop">
             <h5 class="card-title text-center">Fare Trip</h5>
@@ -29,7 +29,7 @@
         </div>
       </div>
       <div class="col-4">
-          <!-- Click event will go on whole card for routing-->
+        <!-- Click event will go on whole card for routing-->
         <div class="card removeBorder">
           <div class="card-body cardThreeTop">
             <h5 class="card-title text-center">Departures/Arrival</h5>
@@ -43,4 +43,6 @@
       </div>
     </div>
   </div>
+  <!-- Modal for Bart advisories -->
+  <app-modal></app-modal>
 </div>
