--- a/src/app/pages/schedules/schedules.component.html
+++ b/src/app/pages/schedules/schedules.component.html
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="col-2 headerTitle">
-            <app-dropdown></app-dropdown>
+            <app-timedropdown></app-timedropdown>
         </div>
         <div class="col-2">
             <app-button buttonText="Get Schedule"></app-button>
