--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -42,7 +42,10 @@
         </div>
       </div>
     </div>
+    <!-- display for Bart advisories -->
+    <div class="alert alert-danger alert-dismissible fade show mt-5" role="alert">
+     <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+   </div>
   </div>
-  <!-- Modal for Bart advisories -->
-  <app-modal></app-modal>
 </div>
