--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="container-fluid noPad" id="background">
+<div class="container-fluid noPad">
   <app-header></app-header>
-  <div class="container-fluid" >
+  <div class="container-fluid" id="background">
     <div class="row cardMargin">
       <div class="col-4">
           <!-- Click event will go on whole card for routing-->
