Getting navigation up for back-end and Racca

--- a/src/app/components/universal/navigation/navigation.component.html
+++ b/src/app/components/universal/navigation/navigation.component.html
@@ -1,1 +1,16 @@
-<p>navigation works!</p>
+<div class="container mt-3">
+    <div class="row">
+        <div class="col-12">
+            <p class="titleBG font41 ps-3 pt-1 m-0">{{location}}</p>
+        </div>
+        <div class="col-12 bodyBorder">
+            <p class="font33 ps-3 m-0">Fare Calculator</p>
+        </div>
+        <div class="col-12 bodyBorder">
+            <p class="font33 ps-3 m-0">Schedules</p>
+        </div>
+        <div class="col-12 bodyBorder">
+            <p class="font33 ps-3 m-0">Real-Time Departures</p>
+        </div>
+    </div>
+</div>
