--- a/src/app/pages/trip-planner/trip-planner.component.css
+++ b/src/app/pages/trip-planner/trip-planner.component.css
@@ -9,8 +9,6 @@ img{
     justify-content: center;
 }
 .mainContainer{
-    margin-right: 100px;
-    margin-left: 100px;
     margin-top: 65px;
 }
 .title{
@@ -51,4 +49,9 @@ img{
     border-style: solid;
     border-color: #707070;
     border-width: 1px;
+}
+.vl{
+    max-width:20px;
+    border-left: 1px solid gray;
+    height: 40px;
 }
