--- a/src/app/pages/trip-planner/trip-planner.component.html
+++ b/src/app/pages/trip-planner/trip-planner.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
-<div class="container mainContainer">
-    <div class="row">
-        <div class="col-8">
-            <div class="container">
+<div class="container-fluid mainContainer ">
+    <div class="row d-flex justify-content-between">
+        <div class="col-6">
+            <div class="container ms-5">
                 <div class="row">
                     <div class="col-12 titleBG d-flex align-items-center">
                         <p class="title ms-3">Trip Planner:</p>
@@ -44,6 +44,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="col-3 ">
+            <app-navigation></app-navigation>
         </div>
     </div>
 </div>
