--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -44,7 +44,7 @@
     </div>
     <!-- display for Bart advisories -->
     <div class="alert alert-danger alert-dismissible fade show mt-5" role="alert">
-     <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+     <strong>Hey!</strong> This is for the BART advisories to be displayed.
      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
    </div>
   </div>
