nav routing finished, also trip planner ngIf applied to search button

--- a/src/app/components/universal/navigation/navigation.component.html
+++ b/src/app/components/universal/navigation/navigation.component.html
@@ -4,13 +4,13 @@
             <p class="titleBG font41 ps-3 pt-1 m-0">{{location}}</p>
         </div>
         <div class="col-12 bodyBorder">
-            <p class="font33 ps-3 m-0">Fare Calculator</p>
+            <p class="font33 ps-3 m-0" routerLink="/trip-planner">Fare Calculator</p>
         </div>
         <div class="col-12 bodyBorder">
-            <p class="font33 ps-3 m-0">Schedules</p>
+            <p class="font33 ps-3 m-0" routerLink="/schedules">Schedules</p>
         </div>
         <div class="col-12 bodyBorder">
-            <p class="font33 ps-3 m-0">Real-Time Departures</p>
+            <p class="font33 ps-3 m-0" routerLink="/departures">Real-Time Departures</p>
         </div>
     </div>
 </div>
