All dropdowns now ass seperate components

--- a/src/app/components/universal/header/header.component.css
+++ b/src/app/components/universal/header/header.component.css
@@ -20,3 +20,23 @@ img{
     font-size: 30px;
     color: #FFFFFF;
 }
+.custom-select {
+    max-width: 150px;
+    border-color: rgb(161, 161, 161);
+    cursor: pointer;
+}
+.custom-select select {
+
+    -webkit-appearance: none;
+
+}
+
+.optionStyle{
+    font-size: 30px;
+    min-width: 100%;
+}
+
+.container{
+    min-width: 100%;
+    padding:0;
+}
