--- a/src/app/components/universal/header/header.component.html
+++ b/src/app/components/universal/header/header.component.html
@@ -10,7 +10,11 @@
             <p class="title">BART Web-Application</p>
         </div>
         <div class="col-2 headerTitle">
-            <app-dropdown [popArray] = "dropArray"></app-dropdown>
+            <div class="container">
+                <select class=" rounded-0 custom-select optionStyle py-2" id="inputGroupSelect01">
+                    <option class="" *ngFor="let item of popArray">{{item}}</option>
+                </select>
+            </div>
         </div>
     </div>
 </nav>
