--- a/src/app/pages/departures/departures.component.css
+++ b/src/app/pages/departures/departures.component.css
@@ -26,3 +26,24 @@ tr {
 .thiccTop {
     border-top: 2px solid;
 }
+
+.custom-select {
+    max-width: 150px;
+    border-color: rgb(161, 161, 161);
+    cursor: pointer;
+}
+.custom-select select {
+
+    -webkit-appearance: none;
+
+}
+
+.optionStyle{
+    font-size: 30px;
+    min-width: 100%;
+}
+
+.container{
+    min-width: 100%;
+    padding:0;
+}
