--- a/src/app/pages/schedules/schedules.component.html
+++ b/src/app/pages/schedules/schedules.component.html
@@ -5,7 +5,11 @@
             <h3 class="mt-5 mb-4 ">Schedules By Station Results</h3>
             <div class="row">
                 <div class="col-2 headerTitle">
-                    <app-dropdown></app-dropdown>
+                    <div class="container">
+                        <select class=" rounded-0 custom-select optionStyle py-2" id="inputGroupSelect01">
+                            <option class="" *ngFor="let item of popArray">{{item}}</option>
+                        </select>
+                    </div>
                 </div>
                 <div class="col-2">
                     <div class="mb-3">
@@ -15,7 +19,11 @@
                     </div>
                 </div>
                 <div class="col-2 headerTitle">
-                    <app-dropdown></app-dropdown>
+                    <div class="container">
+                        <select class=" rounded-0 custom-select optionStyle py-2" id="inputGroupSelect01">
+                            <option class="" *ngFor="let item of popArray">{{item}}</option>
+                        </select>
+                    </div>
                 </div>
                 <div class="col-2">
                     <app-button (click)="toggle = !toggle" buttonText="Get Schedule"></app-button>
@@ -23,7 +31,7 @@
             </div>
         
             <h4 *ngIf="toggle" class="blueText mt-4">Station Schedule Results for [[station name]]</h4>
-           
+        
         
             <div class="row mt-4" *ngIf="toggle">
                 <div class="col">
