added cities and time dropdown

--- a/src/app/pages/schedules/schedules.component.html
+++ b/src/app/pages/schedules/schedules.component.html
@@ -21,7 +21,7 @@
                 <div class="col-2 headerTitle">
                     <div class="container">
                         <select class=" rounded-0 custom-select optionStyle py-2" id="inputGroupSelect01">
-                            <option class="" *ngFor="let item of popArray">{{item}}</option>
+                            <option class="" *ngFor="let item of timeArray">{{item}}</option>
                         </select>
                     </div>
                 </div>
