--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,7 +7,7 @@
         <!-- Click event will go on whole card for routing-->
         <div class="card removeBorder" routerLink="/trip-planner">
           <div class="card-body cardOneTop">
-            <h5 class="card-title text-center">Fare Calculator</h5>
+            <h3 class="card-title text-center"><b>Fare Calculator</b></h3>
           </div>
           <div class="card-body cardOneBottom cardSize">
             <h1 class="d-flex justify-content-center">
@@ -20,7 +20,7 @@
         <!-- Click event will go on whole card for routing-->
         <div class="card removeBorder" routerLink="/schedules">
           <div class="card-body cardTwoTop">
-            <h5 class="card-title text-center">Schedules</h5>
+            <h3 class="card-title text-center"><b>Schedules</b></h3>
           </div>
           <div class="card-body cardSize cardTwoBottom">
             <h1 class="d-flex justify-content-center">
@@ -34,7 +34,7 @@
         <div class="card removeBorder" routerLink="/departures">
 
           <div class="card-body cardThreeTop">
-            <h5 class="card-title text-center">Real Time Departures</h5>
+            <h3 class="card-title text-center"><b>Real-Time<br>Departures</b></h3>
           </div>
           <div class="card-body cardSize cardThreeBottom">
             <h1 class="d-flex justify-content-center">
