--- a/src/app/components/universal/dropdown/dropdown.component.css
+++ b/src/app/components/universal/dropdown/dropdown.component.css
@@ -1,20 +1,20 @@
-.custom-select {
-    max-width: 150px;
-    border-color: rgb(161, 161, 161);
+.pointer {
+    /* max-width: 150px; */
+    /* border-color: rgb(161, 161, 161); */
     cursor: pointer;
 }
-.custom-select select {
-
+/* .custom-select select {
     -webkit-appearance: none;
-
-}
+} */
 
 .optionStyle{
-    font-size: 30px;
+    font-size: 17px;
+    word-wrap: break-word;
     min-width: 100%;
+    /* font-size: 1em; */
 }
 
 .container{
     min-width: 100%;
-    padding:0;
+    /* padding:0; */
 }
