--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -83,3 +83,10 @@ img {
 .removeBorder {
     border: none;
 }
+.zoom {
+    transition: transform .2s; /* Animation */
+   
+}
+.zoom:hover {
+    transform: scale(1.08); /* (110% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
