--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,10 +2,9 @@
   <app-header></app-header>
   <div class="container-fluid" id="background">
     <div class="row cardMargin">
-      <div class="col-4">
-
+      <div class="col-4 zoom">
         <!-- Click event will go on whole card for routing-->
-        <div class="card removeBorder" routerLink="/trip-planner">
+        <div class="card removeBorder " routerLink="/trip-planner">
           <div class="card-body cardOneTop">
             <h5 class="card-title text-center">Fare Calculator</h5>
           </div>
@@ -16,7 +15,7 @@
           </div>
         </div>
       </div>
-      <div class="col-4">
+      <div class="col-4 zoom">
         <!-- Click event will go on whole card for routing-->
         <div class="card removeBorder" routerLink="/schedules">
           <div class="card-body cardTwoTop">
@@ -29,7 +28,7 @@
           </div>
         </div>
       </div>
-      <div class="col-4">
+      <div class="col-4 zoom">
         <!-- Click event will go on whole card for routing-->
         <div class="card removeBorder" routerLink="/departures">
 
