--- a/src/app/pages/departures/departures.component.html
+++ b/src/app/pages/departures/departures.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<div class="container">
+<div class="container-fluid">
 <div class="row">
         <div class="col">
             <h3 class="mt-5">Select station to get upcoming departures:</h3>
@@ -13,7 +13,7 @@
                 </div>
             </div>
         
-            <table class="table pt-5">
+            <table class="table col-lg-10 pt-5">
                 <tbody *ngIf="toggle">
                     <!-- use combo structural directive to display the contents of the table based on data being called in -->
                     <th>
@@ -58,7 +58,7 @@
         
                 </tbody>
             </table>
-            <div *ngIf="toggle" class="d-flex justify-content-end">
+            <div *ngIf="toggle" class="col-lg-10 d-flex justify-content-end">
                 <p><i class="fas fa-train"></i> = 3 door train <del class="redText">Cancelled Trip</del></p>
             </div>
         </div>
