--- a/src/app/pages/schedules/schedules.component.html
+++ b/src/app/pages/schedules/schedules.component.html
@@ -77,7 +77,22 @@
             </div>
         </div>
         <div class="col-3 mt-5">
-            <app-navigation></app-navigation>
+           <div class="container extraMargin">
+                <div class="row">
+                    <div class="col-12">
+                        <p class="font41 ps-3 pt-1 m-0 titleBGS">Schedule</p>
+                    </div>
+                    <div class="col-12">
+                        <p class="font33 ps-3 m-0 navLinks bodyBorder" routerLink="/trip-planner">Fare Calculator</p>
+                    </div>
+                    <div class="col-12">
+                        <p class="font33 ps-3 m-0 navLinks bodyBorder active" routerLink="/schedules">Schedules</p>
+                    </div>
+                    <div class="col-12">
+                        <p class="font33 ps-3 m-0 navLinks bodyBorder" routerLink="/departures">Real-Time Departures</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
