Add column nav to Fare Calc

--- a/src/app/pages/trip-planner/trip-planner.component.html
+++ b/src/app/pages/trip-planner/trip-planner.component.html
@@ -55,7 +55,22 @@
         </div>
 
         <div class="col-3 ">
-            <app-navigation></app-navigation>
+            <div class="container extraMargin">
+                <div class="row">
+                    <div class="col-12">
+                        <p class="font41 ps-3 pt-1 m-0 titleBGFC">Fare Calculator</p>
+                    </div>
+                    <div class="col-12">
+                        <p class="font33 ps-3 m-0 navLinks bodyBorder active" routerLink="/trip-planner">Fare Calculator</p>
+                    </div>
+                    <div class="col-12">
+                        <p class="font33 ps-3 m-0 navLinks bodyBorder" routerLink="/schedules">Schedules</p>
+                    </div>
+                    <div class="col-12">
+                        <p class="font33 ps-3 m-0 navLinks bodyBorder" routerLink="/departures">Real-Time Departures</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
