added mx-5 for all the pages

--- a/src/app/pages/schedules/schedules.component.html
+++ b/src/app/pages/schedules/schedules.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <div class="container-fluid">
-    <div class="row">
+    <div class="row mx-5">
         <div class="col-8 ms-5">
             <h3 class="mt-5 mb-4 ">Schedules By Station Results</h3>
             <div class="row">
