--- a/src/app/pages/trip-planner/trip-planner.component.html
+++ b/src/app/pages/trip-planner/trip-planner.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <div class="container-fluid mainContainer ">
-    <div class="row d-flex justify-content-between">
+    <div class="row d-flex justify-content-between mx-5">
         <div class="col-6">
             <div class="container ms-5">
                 <div class="row">
