--- a/src/app/pages/departures/departures.component.html
+++ b/src/app/pages/departures/departures.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
 <div class="container-fluid">
-<div class="row">
+<div class="row mx-5">
 
         <div class="col">
             <h3 class="mt-5">Select station to get upcoming departures:</h3>
