Fixed padding of logo & text

--- a/src/app/components/universal/header/header.component.css
+++ b/src/app/components/universal/header/header.component.css
@@ -1,28 +1,36 @@
-.navBG{
+.navBG {
     background-color: #0064A8;
 }
-img{
+
+img {
     height: 90px;
     cursor: pointer;
+    padding-left: 2rem;
 }
-.headerTitle{
+
+.headerTitle {
     display: flex;
     justify-content: center;
 }
-.title{
+
+.title {
     /* margin-right: 80px; */
     font-size: 40px;
     font-weight: bold;
     color: #FFFFFF;
 }
-.seasonThree{
+
+.seasonThree {
     /* margin-top: 15px; */
     font-size: 20px;
     color: #FFFFFF;
     display: flex;
     align-items: center;
+    padding-top: 3rem;
+    padding-left: 2rem;
 }
-end{
-    display:flex;
-    justify-content:flex-end;
+
+end {
+    display: flex;
+    justify-content: flex-end;
 }
