--- a/src/app/components/universal/header/header.component.html
+++ b/src/app/components/universal/header/header.component.html
@@ -5,7 +5,7 @@
                     <img src="assets/codestacklogo.png" alt="The Codestack Academy logo" routerLink='/home'>
                 </div>
                 <div class="col-lg-6 d-flex align-center">
-                    <p class="seasonThree mb-1">Season 3</p>
+                    <p class="seasonThree">Season 3</p>
                 </div>
             </div>
         </div>
