--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
   <app-header></app-header>
   <div class="container-fluid" id="background">
     <div class="row cardMargin">
-      <div class="col-4 zoom">
+      <div class="col-4 zoom d-flex justify-content-center">
         <!-- Click event will go on whole card for routing-->
         <div class="card removeBorder " routerLink="/trip-planner">
           <div class="card-body cardOneTop">
@@ -15,7 +15,7 @@
           </div>
         </div>
       </div>
-      <div class="col-4 zoom">
+      <div class="col-4 zoom d-flex justify-content-center">
         <!-- Click event will go on whole card for routing-->
         <div class="card removeBorder" routerLink="/schedules">
           <div class="card-body cardTwoTop">
@@ -28,9 +28,9 @@
           </div>
         </div>
       </div>
-      <div class="col-4 zoom">
+      <div class="col-4  d-flex justify-content-cente">
         <!-- Click event will go on whole card for routing-->
-        <div class="card removeBorder" routerLink="/departures">
+        <div class="card zoom removeBorder" routerLink="/departures">
           <div class="card-body cardThreeTop">
             <h3 class="card-title text-center"><b>Real-Time<br>Departures</b></h3>
           </div>
@@ -42,10 +42,14 @@
         </div>
       </div>
     </div>
-    <!-- display for Bart advisories -->
-    <div class="alert alert-danger alert-dismissible fade show mt-5" role="alert">
-      <strong>Hey!</strong> This is for the BART advisories to be displayed.
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <div class="row d-flex justify-content-center ">
+      <div class="col-8 ">
+        <!-- display for Bart advisories -->
+        <div class="alert alertColor alert-dismissible fade show mt-5 text-center textColor alertSizing " role="alert">
+          <strong>Hey!</strong> This is for the BART advisories to be displayed.
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
