side nav and all pages are uniform

--- a/src/app/pages/trip-planner/trip-planner.component.html
+++ b/src/app/pages/trip-planner/trip-planner.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container-fluid mainContainer ">
+<div class="container-fluid mt-5">
     <div class="row d-flex justify-content-between mx-5">
         <div class="col-6">
             <div class="container ms-5">
@@ -54,8 +54,8 @@
             </div>
         </div>
 
-        <div class="col-3 ">
-            <div class="container extraMargin">
+        <div class="col-3">
+            <div class="container">
                 <div class="row">
                     <div class="col-12">
                         <p class="font41 ps-3 pt-1 m-0 titleBGFC">Fare Calculator</p>
