--- a/src/app/pages/departures/departures.component.html
+++ b/src/app/pages/departures/departures.component.html
@@ -1,10 +1,9 @@
 <app-header></app-header>
 
-<div class="container-fluid">
+<div class="container-fluid mt-5">
 <div class="row mx-5">
-
         <div class="col">
-            <h3 class="mt-5">Select station to get upcoming departures:</h3>
+            <h3>Select station to get upcoming departures:</h3>
             <div class="row mb-5">
                 <div class="col">
                     <div class="container">
@@ -69,7 +68,7 @@
         </div>
 
         <div class="col-4">
-          <div class="container extraMargin">
+          <div class="container">
                 <div class="row">
                     <div class="col-12">
                         <p class="font41 ps-3 pt-1 m-0 titleBGRTD" >Real-Time Departures</p>
