--- a/src/app/pages/schedules/schedules.component.html
+++ b/src/app/pages/schedules/schedules.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <div class="container-fluid">
-    <div class="row mx-5">
+    <div class="row d-flex justify-content-between mx-5">
         <div class="col-8 ms-5">
             <h3 class="mt-5 mb-4 ">Schedules By Station Results</h3>
             <div class="row">
@@ -77,7 +77,7 @@
             </div>
         </div>
         <div class="col-3 mt-5">
-           <div class="container extraMargin">
+           <div class="container">
                 <div class="row">
                     <div class="col-12">
                         <p class="font41 ps-3 pt-1 m-0 titleBGS">Schedule</p>
