Fare Calculator name update

--- a/src/app/pages/trip-planner/trip-planner.component.html
+++ b/src/app/pages/trip-planner/trip-planner.component.html
@@ -5,7 +5,7 @@
             <div class="container ms-5">
                 <div class="row">
                     <div class="col-12 titleBG d-flex align-items-center">
-                        <p class="title ms-3">Trip Planner:</p>
+                        <p class="title ms-3">Fare Calculator:</p>
                     </div>
                     <div class="col-1 ">
                         <p class="abSize mt-3 mb-0">A</p>
