--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,9 +2,9 @@
   <app-header></app-header>
   <div class="container-fluid" id="background">
     <div class="row cardMargin">
-      <div class="col-4 zoom d-flex justify-content-center">
+      <div class="col-4 d-flex justify-content-center">
         <!-- Click event will go on whole card for routing-->
-        <div class="card removeBorder " routerLink="/trip-planner">
+        <div class="card zoom removeBorder " routerLink="/trip-planner">
           <div class="card-body cardOneTop">
             <h3 class="card-title text-center"><b>Fare Calculator</b></h3>
           </div>
@@ -15,9 +15,9 @@
           </div>
         </div>
       </div>
-      <div class="col-4 zoom d-flex justify-content-center">
+      <div class="col-4  d-flex justify-content-center">
         <!-- Click event will go on whole card for routing-->
-        <div class="card removeBorder" routerLink="/schedules">
+        <div class="card zoom removeBorder" routerLink="/schedules">
           <div class="card-body cardTwoTop">
             <h3 class="card-title text-center"><b>Schedules</b></h3>
           </div>
