changes to the bottom modal thing

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -47,10 +47,14 @@
       </div>
     </div>
     <!-- display for Bart advisories -->
-    <div class="alert alert-danger alert-dismissible fade show mt-5" role="alert">
-      <strong>Hey!</strong> This is for the BART advisories to be displayed.
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <div class=" btwn alert alert-danger alert-dismissible fade show mt-5" role="alert">
+      <div>
+        <strong>Hey!</strong> This is for the BART advisories to be displayed.
+      </div>
+      <div>
+        <button type="button" class="btn" data-bs-dismiss="alert" aria-label="Close">x</button>
+      </div>
     </div>
+    
   </div>
 </div>
-
