--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -111,3 +111,7 @@ img {
     transform: scale(1.03); /* (110% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 
 }
+.btwn{
+    display: flex;
+    justify-content: space-between;
+}
